--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
   
-<img src="images(1).jpg" width="60"  height="40"/>
+<img src="images(1).jpg" width="60"  height="40">
 Ola, mundo
 
 </body>
